# codewars

./: Cargo.toml  README.md
create_phone_number/src/: lib.rs
graph_like_sequence/: Cargo.toml
graph_like_sequence/src/: lib.rs
help_the_bookseller/: Cargo.toml
help_the_bookseller/src/: lib.rs
infix_to_postfix_converter/: Cargo.toml
infix_to_postfix_converter/src/: lib.rs
range_extraction/src/: lib.rs
sudoku_solver/src/: lib.rs
the_same/: Cargo.toml
the_same/src/: lib.rs
tic_tac_toe_checker/src/: lib.rs
tiny_three_pass_compiler/: Cargo.toml
tiny_three_pass_compiler/src/: lib.rs
unique_in_order/: Cargo.toml
unique_in_order/src/: lib.rs
valid_braces/: Cargo.toml
valid_braces/src/: lib.rs
who_likes_it/src/: lib.rs
write_number_in_expanded_form/: Cargo.toml
write_number_in_expanded_form/src/: lib.rs
