[package]
name = "codewars"
version = "0.1.0"
authors = ["Martin Junghanns <github@s1ck.dev>"]
description = "Solutions for some Codewars Katas"
edition = "2021"
license = "MIT"

[workspace]

members = [
  "tiny_three_pass_compiler", # https://www.codewars.com/kata/5265b0885fda8eac5900093b
  "write_number_in_expanded_form", # https://www.codewars.com/kata/5842df8ccbd22792a4000245
  "help_the_bookseller", # https://www.codewars.com/kata/54dc6f5a224c26032800005c
  "who_likes_it", # https://www.codewars.com/kata/5266876b8f4bf2da9b000362
  "create_phone_number", # https://www.codewars.com/kata/525f50e3b73515a6db000b83
  "valid_braces", # https://www.codewars.com/kata/5277c8a221e209d3f6000b56
  "sudoku_solver", # https://www.codewars.com/kata/5296bc77afba8baa690002d7
  "tic_tac_toe_checker", # https://www.codewars.com/kata/525caa5c1bf619d28c000335
  "infix_to_postfix_converter", # https://www.codewars.com/kata/52e864d1ffb6ac25db00017f
  "range_extraction", # https://www.codewars.com/kata/51ba717bb08c1cd60f00002f
  "unique_in_order", # https://www.codewars.com/kata/54e6533c92449cc251001667
]

